--- a/Software/Using_RadioLib/PlatformIO/RFM1262-PONG/platformio.ini
+++ b/Software/Using_RadioLib/PlatformIO/RFM1262-PONG/platformio.ini
@@ -9,13 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 [platformio]
 default_envs = 
-	feather32u4
-	featherhuzzah8266
+	; feather32u4
+	; featherhuzzah8266
 	featheresp32
-	feather328p
-	adafruit_feather_m0
-	adafruit_feather_nrf52832
-	adafruit_feather_nrf52840
+	; feather328p
+	; adafruit_feather_m0
+	; adafruit_feather_nrf52832
+	; adafruit_feather_nrf52840
 
 [common]
 lib_deps =
